[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/OynaUstunde.png" type="Texture" id=2]
[ext_resource path="res://Sprites/OynaButton.png" type="Texture" id=3]
[ext_resource path="res://Sprites/OynaTikla.png" type="Texture" id=4]
[ext_resource path="res://Sprites/HakkindaButtonUstunde.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HakkindaButton.png" type="Texture" id=6]
[ext_resource path="res://Sprites/HakkindaButtonTikla.png" type="Texture" id=7]
[ext_resource path="res://Sprites/BackgroundTitle.png" type="Texture" id=8]
[ext_resource path="res://Sprites/CikButtonUstunde.png" type="Texture" id=9]
[ext_resource path="res://Sprites/CikButton.png" type="Texture" id=10]
[ext_resource path="res://Sprites/CikButtonTikla.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=12]
[ext_resource path="res://Scenes/SceneTransitionRect.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 93, 32 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 93, 32 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 93, 32 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 93, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 93, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 95, 28 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 95, 28 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 95, 28 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 95, 28 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 95, 28 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 90, 35 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 90, 35 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 90, 35 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 90, 35 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 90, 35 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.374573
margin_right = 39.6254
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.327778
anchor_top = 0.388356
anchor_right = 0.658333
anchor_bottom = 0.927245
margin_top = -3.8147e-06
margin_right = -1.52588e-05
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OynaButton" type="Button" parent="Background/HBoxContainer"]
margin_right = 119.0
margin_bottom = 25.338
rect_min_size = Vector2( 119, 25.338 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HakkindaButton" type="Button" parent="Background/HBoxContainer"]
margin_top = 24.0
margin_right = 119.0
margin_bottom = 49.338
rect_min_size = Vector2( 119, 25.338 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CikButton" type="Button" parent="Background/HBoxContainer"]
margin_top = 48.0
margin_right = 119.0
margin_bottom = 73.338
rect_min_size = Vector2( 119, 25.338 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackgroundTitle" type="Sprite" parent="."]
modulate = Color( 0.00392157, 0.121569, 0, 1 )
position = Vector2( 178.398, 41.7383 )
scale = Vector2( 0.747519, 0.747519 )
texture = ExtResource( 8 )

[node name="SceneTransitionRect" parent="." instance=ExtResource( 13 )]
margin_left = 0.749161
margin_right = 0.749146

[connection signal="pressed" from="Background/HBoxContainer/OynaButton" to="." method="_on_OynaButton_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/HakkindaButton" to="." method="_on_HakkindaButton_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/CikButton" to="." method="_on_CikButton_pressed"]
